# runtpl

./: Cargo.toml  LICENSE  README.md
examples/: data.json  example.tpl  files.tpl  loop_test.tpl  nested_loop.tpl  simple_variables.tpl  test.tpl
src/: builtin_fns.rs  cli.rs  context.rs  engine.rs  error.rs  main.rs  template_manager.rs
