[package]
name = "autoprompt"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
edit = "0.1.5"
itertools = "0.14.0"
lazy_static = "1.5.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
walkdir = "2.5.0"
